--- a/package.json
+++ b/package.json
@@ -7,23 +7,22 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": ">=14.15.0"
+    "node": ">=20.x"
   },
   "dependencies": {
-    "@middy/core": "^3.6.2",
-    "@middy/http-json-body-parser": "^3.6.2"
+    "@middy/core": "^5.1.0",
+    "@middy/http-json-body-parser": "^5.1.0"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.38.0",
-    "@types/aws-lambda": "^8.10.71",
-    "@types/node": "^14.14.25",
-    "esbuild": "^0.14.11",
-    "json-schema-to-ts": "^1.5.0",
-    "serverless": "^3.0.0",
-    "serverless-esbuild": "^1.23.3",
-    "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.3"
+    "@types/aws-lambda": "^8.10.130",
+    "@types/node": "^20.10.5",
+    "esbuild": "^0.19.10",
+    "json-schema-to-ts": "^2.12.0",
+    "serverless-esbuild": "^1.50.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.3.3"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
   "license": "MIT"
